Improve updater and endpoint info
The new mechanism reads a file hosted on faforever.com which allows us
to add more options, like `mandatory`, which can be set to force client
updates in future (e. g. when ICE out), and platform-specific URLs in
order to avoid guesses based on the file name.

Additionally, specifying endpoint URLs prepares for the much requested
drop-down like "Production", "Test" and "ICE Test" and allows to change
those w/o client update.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,8 @@ faf-client:
     rackOversUrl: http://direct.faforever.com/faf/unitsDB/?settings64=eyJwcmV2aWV3Q29ybmVyIjoiTm9uZSJ9
 
   translation-project-url: https://poeditor.com/join/project/2oWfdaZQZj
+  client-config-url: http://content.faforever.com/dfc-config.json
+  client-config-connect-timeout: 10s
 
 spring:
   profiles:
