java ice adapter cleanup

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ javafxVersion=11
 coverallsGradlePluginVersion=2.8.2
 jnaVersion=5.0.0
 jacocoVersion=0.8.2
+install4jHomeDir=/home/geosearchef/Programs/install4j7
