Java ice adapter (#1147)
* Changes for ice adapter

* update ice adapter version, build script for archive

* log directory

* support multiple ice server with different credentials

* download ice adapter from github releases

* natives in seperate directory

* bump ice adapter version

* fix username iceServer extraction

* fix rpc to ice on linux, delay connection attempts

* bump ice adapter version

* java ice adapter cleanup

* bump ice adapter version to 2.0.1

* fix ladder lobby mode

* ask for game path when joining a game aswell

* no background image button
add a button to the settings to allow the user to set no background image

* bump ice adapter to version 2.1.0

* Configurable ice adapter debug window (enabled by default)

* Adapt to ICE Adapter 2.3.0

* remove posix uid executable bit, fixes #1162

--- a/build.gradle
+++ b/build.gradle
@@ -142,8 +142,7 @@ distributions {
         [
             configurations.runtime,
             jar,
-            unpackIceAdapter.outputs.files,
-            downloadIceAdapterLinux.outputs.files,
+            downloadIceAdapter.outputs.files,
             downloadUnixUid.outputs.files,
             downloadWindowsUid.outputs.files
         ]
@@ -192,28 +191,9 @@ task buildInstall4jMediaFiles(type: Install4jTask) {
 
 task downloadIceAdapter(type: Download) {
   group "native dependencies"
-  src "https://github.com/FAForever/ice-adapter/releases/download/v${faf_ice_adapter_version}/faf-ice-adapter-win32.zip"
-  dest file("${buildDir}/tmp/faf-ice-adapter.zip")
+  src "https://github.com/FAForever/java-ice-adapter/releases/download/v${faf_ice_adapter_version}/faf-ice-adapter.jar"
+  dest file("${buildDir}/resources/native/faf-ice-adapter.jar")
   onlyIfNewer true
-}
-
-task downloadIceAdapterLinux(type: Download) {
-  group "native dependencies"
-  src "https://github.com/FAForever/ice-adapter/releases/download/v${faf_ice_adapter_version}/faf-ice-adapter-linux64.tar.gz"
-  dest file("${buildDir}/tmp/faf-ice-adapter-linux.tar.gz")
-  onlyIfNewer true
-}
-
-task unpackIceAdapter(type: Copy, dependsOn: downloadIceAdapter) {
-  group "native dependencies"
-  from zipTree(downloadIceAdapter.outputs.files.singleFile)
-  into file("${buildDir}/resources/native")
-}
-
-task unpackIceAdapterLinux(type: Copy, dependsOn: downloadIceAdapterLinux) {
-  group "native dependencies"
-  from tarTree(resources.gzip(downloadIceAdapterLinux.outputs.files.singleFile))
-  into file("${buildDir}/resources/native")
 }
 
 task downloadUnixUid(type: Download) {
@@ -230,7 +210,7 @@ task downloadWindowsUid(type: Download) {
   onlyIfNewer true
 }
 
-task downloadNativeDependencies(dependsOn: [unpackIceAdapter, downloadUnixUid, downloadWindowsUid, unpackIceAdapterLinux]) {
+task downloadNativeDependencies(dependsOn: [downloadUnixUid, downloadWindowsUid, downloadIceAdapter]) {
   group "native dependencies"
 }
 
