--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,6 @@ jfoenixVersion=9.0.6
 javassist.version=3.23.1-GA
 javafxVersion=11
 coverallsGradlePluginVersion=2.8.2
-jnaVersion=5.3.1
+jnaVersion=5.0.0
 jacocoVersion=0.8.2
+discordRpcVersion=1.6.2-jna
