--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,7 +56,7 @@ logging:
     org.springframework.web.client: info
     org.springframework.security.oauth2: info
     org.springframework.security.oauth2.client.token.grant: off
-    faf-ice-adapter: debug
+    faf-ice-adapter: info
 
     org.ice4j.stack: warn
     com.nbarraille.jjsonrpc: warn
