--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,7 +65,7 @@ logging:
     com.faforever.client.FafClientApplication: info
     com.faforever.client.api: info
     com.faforever.client.connectivity: info
-    com.faforever.client.chat: debug
+    com.faforever.client.chat: info
     com.faforever.client.preferences: info
     com.faforever.client.map: info
     com.faforever.client.mod: info
