--- a/build.gradle
+++ b/build.gradle
@@ -129,9 +129,9 @@ configurations {
 jar {
   manifest {
     attributes "Main-Class": "com.faforever.client.FafClientApplication",
-        "Implementation-Title": "Downlord's FAF Client",
+        "Implementation-Title": "Official FAF Client",
         "Implementation-Version": version,
-        "Implementation-Vendor": "Downlord"
+        "Implementation-Vendor": "Forged Alliance Forever"
   }
 }
 
