Fix tests in Eclipse
Bumps Spring boot and auto-configure minor version and makes standard output visible when running test from Eclipse or executing gradle from console
Fixes #1324

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ javafxPlatform=unspecified
 faf_ice_adapter_version=2.3.0
 faf_uid_version=4.0.4
 propdepsVersion=0.0.7
-springBootVersion=2.1.0.RC1
-springSecurityOauth2AutoconfigureVersion=2.0.0.RELEASE
+springBootVersion=2.1.6.RELEASE
+springSecurityOauth2AutoconfigureVersion=2.1.6.RELEASE
 lombokVersion=1.18.2
 fafCommonsVersion=9aaa2591adaaa9dff07e7e08f7bc9597b477b91b
 jacksonDatatypeJsr310Version=2.9.7
