Add channel topics
Fix #1234

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ coverallsGradlePluginVersion=2.8.2
 jnaVersion=5.0.0
 jacocoVersion=0.8.2
 discordRpcVersion=1.6.2-jna
+install4jHomeDir=C:\\Program Files\\install4j7
