Fix install4j version

--- a/.travis.yml
+++ b/.travis.yml
@@ -85,3 +85,4 @@ cache:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
   - /home/travis/build/FAForever/downlords-faf-client/build/cache/
+  - ~/$JDK
