--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@ qBuildersVersion=1.6
 jSkillsVersion=8b333ec63d
 jsonapiConverterVersion=0.9
 bireusVersion=1c2984230357955457e52bd39ca56c5a18977295
-install4jRuntimeVersion=7.0.7
+# ↓↓↓ Also adjust the plugin version in build.gradle when changing this ↓↓↓
+install4jVersion=8.0
 jfoenixVersion=9.0.6
 javassist.version=3.23.1-GA
 javafxVersion=11
