--- a/build.gradle
+++ b/build.gradle
@@ -132,9 +132,14 @@ configurations {
   codacy
 }
 
+
+bootRun {
+    main = "com.faforever.client.Main"
+}
+
 jar {
   manifest {
-    attributes "Main-Class": "com.faforever.client.FafClientApplication",
+    attributes "Main-Class": "com.faforever.client.Main",
         "Implementation-Title": "Downlord's FAF Client",
         "Implementation-Version": version,
         "Implementation-Vendor": "Downlord"
