Refactor chat classes architecture
- Renamed ChatService to OldChatService
- New ChatServiceAdapter class that implements OldChatService passes calls to specializes services for compatibility
- ChatServiceImpl does not implement OldChatService anymore, moved any chat room specific code to new ChatRoomService

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,6 +68,7 @@ logging:
     com.faforever.client.FafClientApplication: info
     com.faforever.client.api: info
     com.faforever.client.connectivity: info
+    com.faforever.client.chat.jan.ChatServiceImpl: info
     com.faforever.client.chat: debug
     com.faforever.client.preferences: info
     com.faforever.client.map: info
