--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,10 +6,10 @@ faf-client:
     host: irc.faforever.com
 
   vault:
-    base-url: http://content.faforever.com
+    base-url: https://content.faforever.com
 
   news:
-    feed-url: http://direct.faforever.com/news/feed
+    feed-url: https://direct.faforever.com/news/feed
 
   replay:
     remote-host: lobby.faforever.com
@@ -25,6 +25,6 @@ faf-client:
   status-page-url: http://statuspage.faforever.com
 
   forged-alliance:
-    exe-url: http://content.faforever.com/faf/updaterNew/updates_faf_files/ForgedAlliance.exe
+    exe-url: https://content.faforever.com/faf/updaterNew/updates_faf_files/ForgedAlliance.exe
 
   use-remote-preferences: true
