--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
   repositories {
     mavenCentral()
     maven { url 'https://maven.ej-technologies.com/repository' }
-    maven { url 'http://repo.spring.io/plugins-release' }
+    maven { url 'https://repo.spring.io/plugins-release' }
   }
 
   dependencies {
@@ -235,8 +235,8 @@ repositories {
   jcenter()
   maven { url "https://jitpack.io" }
   maven { url 'https://maven.ej-technologies.com/repository' }
-  maven { url "http://dl.bintray.com/typesafe/maven-releases" }
-  maven { url "http://maven.teamdev.com/repository/products" }
+  maven { url "https://dl.bintray.com/typesafe/maven-releases" }
+  maven { url "https://maven.teamdev.com/repository/products" }
   maven { url "https://repo.spring.io/milestone/" }
 }
 
