--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,10 +6,10 @@ faf-client:
     host: localhost
 
   vault:
-    base-url: http://content.faforever.com
+    base-url: https://content.faforever.com
 
   news:
-    feed-url: http://direct.faforever.com/news/feed
+    feed-url: https://direct.faforever.com/news/feed
 
   replay:
     remote-host: localhost
@@ -23,7 +23,7 @@ faf-client:
     client-secret: 6035bd78-7730-11e5-8bcf-feff819cdc9f
 
   forged-alliance:
-    exe-url: http://content.faforever.com/faf/updaterNew/updates_faf_files/ForgedAlliance.exe
+    exe-url: https://content.faforever.com/faf/updaterNew/updates_faf_files/ForgedAlliance.exe
 
 logging:
   level:
