--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -9,7 +9,7 @@ faf-client:
     base-url: http://content.test.faforever.com
 
   news:
-    feed-url: http://direct.faforever.com/news/feed
+    feed-url: https://direct.faforever.com/news/feed
 
   replay:
     remote-host: test.faforever.com
