Remove https from news url

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,7 +9,7 @@ faf-client:
     base-url: https://content.faforever.com
 
   news:
-    feed-url: https://direct.faforever.com/news/feed
+    feed-url: http://direct.faforever.com/news/feed
 
   replay:
     remote-host: lobby.faforever.com
