--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,7 @@ faf-client:
 
   unit-database:
     spookiesUrl: https://spooky.github.io/unitdb/#/
-    rackOversUrl: https://direct.faforever.com/faf/unitsDB/?settings64=eyJwcmV2aWV3Q29ybmVyIjoiTm9uZSJ9
+    rackOversUrl: https://unitdb.faforever.com?settings64=eyJwcmV2aWV3Q29ybmVyIjoiTm9uZSJ9
 
   map-generator:
     repoAndOwnerName: FAForever/Neroxis-Map-Generator
