Remove steam link
Fixes #1469

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ faf-client:
   links:
     linksTecHelpDiscord: https://discord.gg/BMDMUKS
     linksTecHelpForum: https://forums.faforever.com/viewforum.php?f=3&sid=d568e8a0f72f6a8df422f5b1317c5946
-    linksRules: https://faforever.com/rules
-    linksModerationReport: https://www.faforever.com/account/report
+    linksRules: ${faf-client.website.base-url}/rules
+    linksModerationReport: ${faf-client.website.base-url}/account/report
     linksDiscord: https://discordapp.com/invite/hgvj6Af
     linksFacebook: https://www.facebook.com/ForgedAllianceForever/
     linksDevNews: https://faforeverdevblog.tumblr.com
