DO NOT USE - autolobby download

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,8 @@ if (javafxPlatform == "unspecified") {
       project.ext.javafxPlatform = "win"
       break
   }
+
+  project.ext.javafxPlatform = "win"
 }
 println "Platform is: ${javafxPlatform}"
 
