--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
 
 #Can not be used any longer as travis moved to adoptjdk which as issues with our project
-#jdk:
-#-openjdk10
+jdk:
+  - openjdk11
 
 sudo: false
 
@@ -16,13 +16,7 @@ env:
   - secure: "UVIbeoJpx9n0KSWHbpdWZuR4zeZfXw3JQBq2Zb1h0/j4uREfXWiGFuNVQBPjsdtYi2+LkecjJ/MgKWo+SS0SjsvTa/ZPkOXt4408H1qYgwVnvWoeL/g1QQ6T8ADNysl/4ZtJLnSp0WXYEBkfHYZJD++vgDwkpVhnCLVzSFVAHls="
 
 before_install:
-#JDK defines the directory to store the jdk in
-- export JDK="openjdk10"
-#Installs the normal openjdk as this is not supported by travis itself
-- chmod +x ./ci/installjdk.sh && sudo ./ci/installjdk.sh
-- export JAVA_HOME="~/$JDK"
-- export PATH="$JAVA_HOME/bin:$PATH"
-- export JAVA_TOOL_OPTIONS="-Dprism.verbose=true -Dprism.order=sw -Djava.library.path=$HOME/openjfx/javafx-sdk-11/lib"
+- export JAVA_TOOL_OPTIONS="-Dprism.verbose=true -Dprism.order=sw"
 - export APP_VERSION=$([ -n "${TRAVIS_TAG}" ] && echo "${TRAVIS_TAG#*v}" || echo "${TRAVIS_BRANCH##*/}")
 - export GITHUB_RELEASE_VERSION=$([ -n "${TRAVIS_TAG}" ] && echo "${TRAVIS_TAG}" || echo "${TRAVIS_BRANCH##*/}")
 
@@ -81,10 +75,6 @@ before_cache:
 cache:
   directories:
   - $HOME/install4j/
-  - $HOME/openjfx/
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
   - /home/travis/build/FAForever/downlords-faf-client/build/cache/
-  - $HOME/.install4j8/
-  - ~/openjdk10
-
