Fix coveralls by update

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,6 @@ buildscript {
     classpath("gradle.plugin.install4j.install4j:gradle_plugin:7.0.7")
     classpath("org.springframework.build.gradle:propdeps-plugin:${propdepsVersion}")
     classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-    classpath("org.kt3k.gradle.plugin:coveralls-gradle-plugin:${coverallsGradlePluginVersion}")
   }
 }
 
@@ -28,14 +27,14 @@ plugins {
   id "de.undercouch.download" version "3.4.3"
   id "io.franzbecker.gradle-lombok" version "1.14"
   id 'net.ltgt.apt' version '0.19'
+  id 'jacoco'
+  id 'com.github.kt3k.coveralls' version "${coverallsGradlePluginVersion}"
 }
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'propdeps'
-apply plugin: 'jacoco'
-apply plugin: 'com.github.kt3k.coveralls'
 apply plugin: 'distribution'
 
 
@@ -245,10 +244,6 @@ repositories {
   maven { url "https://dl.bintray.com/typesafe/maven-releases" }
   maven { url "https://maven.teamdev.com/repository/products" }
   maven { url "https://repo.spring.io/milestone/" }
-}
-
-jacoco {
-  toolVersion = "${jacocoVersion}"
 }
 
 dependencies {
