--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: java
 
-jdk:
-  - openjdk11
-
 sudo: false
 
 services:
@@ -15,14 +12,19 @@ env:
     - secure: "UVIbeoJpx9n0KSWHbpdWZuR4zeZfXw3JQBq2Zb1h0/j4uREfXWiGFuNVQBPjsdtYi2+LkecjJ/MgKWo+SS0SjsvTa/ZPkOXt4408H1qYgwVnvWoeL/g1QQ6T8ADNysl/4ZtJLnSp0WXYEBkfHYZJD++vgDwkpVhnCLVzSFVAHls="
 
 before_install:
+  - export JDK="openjdk11"
+  #Installs the normal openjdk as this is not supported by travis itself
+  - chmod +x ./ci/installjdk.sh && sudo ./ci/installjdk.sh
+  - export JAVA_HOME="~/$JDK"
+  - export PATH="$JAVA_HOME/bin:$PATH"
+  - export JAVA_TOOL_OPTIONS="-Dprism.verbose=true -Dprism.order=sw -Djava.library.path=$HOME/openjfx/javafx-sdk-11/lib"
   - export JAVA_TOOL_OPTIONS="-Dprism.verbose=true -Dprism.order=sw"
   - export APP_VERSION=$([ -n "${TRAVIS_TAG}" ] && echo "${TRAVIS_TAG#*v}" || echo "${TRAVIS_BRANCH##*/}")
   - export GITHUB_RELEASE_VERSION=$([ -n "${TRAVIS_TAG}" ] && echo "${TRAVIS_TAG}" || echo "${TRAVIS_BRANCH##*/}")
-  - sudo rm "${JAVA_HOME}/lib/security/cacerts"
-  - sudo ln -s /etc/ssl/certs/java/cacerts "${JAVA_HOME}/lib/security/cacerts"
 
 script:
   - echo "$JAVA_HOME"
+  - java -version
   - chmod +x ./ci/build.sh && ./ci/build.sh
   - chmod +x ./ci/test.sh && ./ci/test.sh
   - chmod +x ./ci/test-report.sh && ./ci/test-report.sh
@@ -79,3 +81,4 @@ cache:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
   - /home/travis/build/FAForever/downlords-faf-client/build/cache/
+  - -~/openjdk11
