--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ before_install:
   #Installs the normal openjdk as this is not supported by travis itself
   - chmod +x ./ci/installjdk.sh && sudo ./ci/installjdk.sh
   - export JAVA_HOME="~/$JDK"
-  - export PATH="$JAVA_HOME/bin:$PATH"
   - export JAVA_TOOL_OPTIONS="-Dprism.verbose=true -Dprism.order=sw -Djava.library.path=$HOME/openjfx/javafx-sdk-11/lib"
   - export JAVA_TOOL_OPTIONS="-Dprism.verbose=true -Dprism.order=sw"
   - export APP_VERSION=$([ -n "${TRAVIS_TAG}" ] && echo "${TRAVIS_TAG#*v}" || echo "${TRAVIS_BRANCH##*/}")
   - export GITHUB_RELEASE_VERSION=$([ -n "${TRAVIS_TAG}" ] && echo "${TRAVIS_TAG}" || echo "${TRAVIS_BRANCH##*/}")
+
+before_script:
+  - export PATH="$JAVA_HOME/bin:$PATH"
 
 script:
   - echo "$JAVA_HOME"
@@ -81,4 +83,4 @@ cache:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
   - /home/travis/build/FAForever/downlords-faf-client/build/cache/
-  - -~/openjdk11
+  - ~/openjdk11
