--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ import org.gradle.internal.os.OperatingSystem
 
 buildscript {
   repositories {
-    mavenCentral()
+    jcenter()
     maven { url 'https://maven.ej-technologies.com/repository' }
     maven { url 'https://repo.spring.io/plugins-release' }
   }
@@ -31,12 +31,12 @@ plugins {
   id 'com.github.kt3k.coveralls' version "${coverallsGradlePluginVersion}"
 }
 
+apply from: "${rootProject.rootDir}/gradle/update4j.gradle"
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'propdeps'
 apply plugin: 'distribution'
-
 
 sourceCompatibility = JavaVersion.VERSION_14
 targetCompatibility = JavaVersion.VERSION_14
@@ -227,8 +227,8 @@ task downloadNativeDependencies(dependsOn: [downloadUnixUid, downloadWindowsUid,
   group "native dependencies"
 }
 
-compileJava.dependsOn 'downloadNativeDependencies'
-compileJava.dependsOn ':webview-patch:build'
+assemble.dependsOn 'downloadNativeDependencies'
+createUpdate4jConfig.dependsOn assemble
 
 task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
   main = "com.codacy.CodacyCoverageReporter"
@@ -253,6 +253,7 @@ dependencies {
   compile("org.springframework:spring-web")
 
   compile("com.github.FAForever:faf-java-commons:${fafCommonsVersion}") {
+    exclude module: 'luaj-jse'
     exclude module: 'guava'
   }
   compile("com.google.code.gson:gson:2.8.5")
@@ -271,7 +272,8 @@ dependencies {
   compile("org.jsoup:jsoup:1.11.3")
   compile("com.nativelibs4java:bridj:0.7.0")
   compile("com.github.nocatch:nocatch:1.1")
-  compile("org.luaj:luaj-jse:3.0.1")
+  // Custom version because of https://github.com/luaj/luaj/issues/70
+  compile("com.github.micheljung:luaj:da919e2")
   compile("commons-validator:commons-validator:1.6")
   compile("com.github.micheljung:JJsonRpc:01a7fba5f4")
   compile("javax.inject:javax.inject:1")
@@ -283,8 +285,10 @@ dependencies {
   compile("javax.annotation:javax.annotation-api:1.3.1")
   compile("com.github.ben-manes.caffeine:caffeine")
   compile("org.apache.httpcomponents:httpclient")
-  compile("ch.micheljung.fxstage:fxstage:0.7.3")
+  compile("ch.micheljung.fxstage:fxstage:0.7.2")
   compile("ch.micheljung.waitomo:jfx-waitomo-theme:0.2.0")
+  // FIXME remove, just here so I can inspect the JAR
+  compile "org.update4j:update4j:${update4jVersion}"
 
   compile("org.openjfx:javafx-base:${javafxVersion}:${javafxPlatform}")
   compile("org.openjfx:javafx-controls:${javafxVersion}:${javafxPlatform}")
@@ -295,7 +299,7 @@ dependencies {
   compile("org.openjfx:javafx-media:${javafxVersion}:${javafxPlatform}")
   compile ("com.github.axel1200:discord-rpc:${discordRpcVersion}")
 
-  compile project(":webview-patch")
+  compile('com.github.micheljung:javafx-transparent-webview-patch:0468c80')
   compile("org.javassist:javassist:${project.ext['javassist.version']}")
 
   provided("com.install4j:install4j-runtime:${install4jRuntimeVersion}")
