--- a/gradle.properties
+++ b/gradle.properties
@@ -7,14 +7,16 @@ springBootVersion=2.3.1.RELEASE
 springSecurityOauth2AutoconfigureVersion=2.3.1.RELEASE
 lombokVersion=1.18.12
 fafCommonsVersion=0b83fa48a039cea085a7d462cc937fb5a035c186
-jacksonDatatypeJsr310Version=2.9.7
+jacksonDatatypeJsr310Version=2.11.0
 qBuildersVersion=1.6
 jSkillsVersion=8b333ec63d
-jsonapiConverterVersion=0.9
+jsonapiConverterVersion=0.10
 install4jRuntimeVersion=7.0.7
 jfoenixVersion=9.0.10
-javassist.version=3.23.1-GA
-javafxVersion=11.0.2
+javassist.version=3.27.0-GA
+javafxVersion=14.0.1
 coverallsGradlePluginVersion=2.10.1
-jnaVersion=5.0.0
+jnaVersion=5.5.0
 discordRpcVersion=1.6.2-jna
+update4jVersion=1.5.3
+webViewPatchVersion=dcd5e2ca
