--- a/build.gradle
+++ b/build.gradle
@@ -1,48 +1,47 @@
+import com.faforever.client.Update4jConfigTask
 import com.install4j.gradle.Install4jTask
 import de.undercouch.gradle.tasks.download.Download
-import groovy.json.JsonSlurper
-import groovyx.net.http.ContentType
-import groovyx.net.http.HTTPBuilder
-import groovyx.net.http.Method
-import groovyx.net.http.ParserRegistry
 import org.gradle.internal.os.OperatingSystem
+
+import java.nio.file.Paths
 
 buildscript {
   repositories {
-    mavenCentral()
+    jcenter()
     maven { url 'https://maven.ej-technologies.com/repository' }
     maven { url 'https://repo.spring.io/plugins-release' }
   }
 
   dependencies {
-    classpath("gradle.plugin.install4j.install4j:gradle_plugin:7.0.7")
     classpath("org.springframework.build.gradle:propdeps-plugin:${propdepsVersion}")
     classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
   }
 }
 
 plugins {
-  id "com.install4j.gradle" version "7.0.7"
+  id "com.install4j.gradle" version "8.0.7"
   id "co.riiid.gradle" version "0.4.2"
   id "de.undercouch.download" version "3.4.3"
-  id "io.franzbecker.gradle-lombok" version "1.14"
-  id 'net.ltgt.apt' version '0.19'
+  id "io.freefair.lombok" version "5.1.0"
   id 'jacoco'
   id 'com.github.kt3k.coveralls' version "${coverallsGradlePluginVersion}"
+  id "org.jetbrains.gradle.plugin.idea-ext" version "0.7"
+  id 'org.beryx.runtime' version '1.11.0'
 }
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'propdeps'
-apply plugin: 'distribution'
-
 
 sourceCompatibility = JavaVersion.VERSION_14
 targetCompatibility = JavaVersion.VERSION_14
 
+mainClassName = "com.faforever.client.Main"
+group 'com.faforever'
+
 // These are read from gradle.properties
 version "${version}"
+println "Version is ${version}"
 project.ext.javafxPlatform = "${javafxPlatform}"
 
 bootJar.enabled = false
@@ -76,45 +75,6 @@ configurations {
   compile.exclude module: "assertj-core"
 }
 
-lombok {
-  version = "${lombokVersion}"
-  sha256 = ""
-}
-
-class HttpBuilder extends HTTPBuilder {
-
-  HttpBuilder(String url) {
-    super(url)
-    this.parser.'text/json' = { resp ->
-      def bufferedText = resp.entity.content.getText(ParserRegistry.getCharset(resp)).trim()
-      return new JsonSlurper().parseText(bufferedText)
-    }
-    this.parser.'application/json' = this.parser.'text/json'
-  }
-}
-
-def httpRequest(Method method, String url, onSuccess) {
-  def http = new HttpBuilder(url)
-
-  http.request(method) {
-    requestContentType = ContentType.JSON
-
-    headers.'User-Agent' = 'downlords-faf-client-gradle'
-    headers.'Authorization' = "token ${project.github.token}"
-    headers.'Accept' = 'application/vnd.github.v3+json'
-
-    response.success = onSuccess
-
-    response.failure = { resp, json ->
-      logger.debug 'Response headers: \n' + resp.headers.collect { "< $it" }.join('\n')
-      def errorMessage = json ? json.message : resp.statusLine
-      def ref = json ? "See $json.documentation_url" : ''
-      def errorDetails = json && json.errors ? "Details: " + json.errors.collect { it }.join('\n') : ''
-      throw new GradleScriptException("$errorMessage. $ref. $errorDetails", null)
-    }
-  }
-}
-
 jacocoTestReport {
   reports {
     xml.enabled = true
@@ -129,35 +89,40 @@ test {
 
 configurations {
   codacy
-}
-
-
-bootRun {
-    main = "com.faforever.client.Main"
+  webViewPatch
+  updater
 }
 
 jar {
-  manifest {
-    attributes "Main-Class": "com.faforever.client.Main",
-        "Implementation-Title": "Downlord's FAF Client",
-        "Implementation-Version": version,
-        "Implementation-Vendor": "Downlord"
+  doFirst {
+    manifest {
+      attributes "Main-Class": project.mainClassName,
+          "Implementation-Title": "FAF Client",
+          "Implementation-Version": version,
+          "Implementation-Vendor": "Downlord",
+          "Class-Path": (configurations.runtimeClasspath.collect { it.name }.join(' '))
+    }
   }
 }
 
 distributions {
   main {
     contents {
-      from {
-        [
-            configurations.runtime,
-            jar,
-            downloadIceAdapter.outputs.files,
-            downloadUnixUid.outputs.files,
-            downloadWindowsUid.outputs.files
-        ]
+      into('tools') {
+        from { [downloadIceAdapter.outputs.files, downloadUnixUid.outputs.files, downloadWindowsUid.outputs.files] }
+        from "${rootDir}/src/media/splash/splash.png"
+
+        from(configurations.webViewPatch) {
+          include "*webview-patch*.jar"
+          rename '.*webview-patch.*\\.jar', 'webview-patch.jar'
+        }
+        from(configurations.updater) {
+          include "updater-*.jar"
+          rename 'updater-.*\\.jar', 'updater.jar'
+        }
       }
       exclude('**/i4jruntime*.jar')
+      into('')
     }
   }
 }
@@ -197,43 +162,100 @@ task buildInstall4jMediaFiles(type: Install4jTask) {
       throw new RuntimeException('Specify install4jHomeDir in gradle.properties and set it to an install4j installation directory')
     }
   }
+
+  doLast {
+    if (project.ext.javafxPlatform == "win") {
+      def zipPath = file("${buildDir}/install4j").listFiles().find { it.name.startsWith('faf_windows-x64_') && it.name.endsWith('.zip') }
+      copy {
+        // TODO if someone knows how to hook this to the output of buildInstall4jMediaFiles, please do so
+        from(zipTree(zipPath))
+        into "${buildDir}/update4j/win/"
+      }
+    } else if (project.ext.javafxPlatform == "linux") {
+      println "Update4j Platform is: " + project.ext.javafxPlatform
+      def tarPath = file("${buildDir}/install4j").listFiles().find { it.name.startsWith('faf_unix_') && it.name.endsWith('.tar.gz') }
+      println "Linux tar: " + tarPath
+
+      copy {
+        // TODO if someone knows how to hook this to the output of buildInstall4jMediaFiles, please do so
+        from(tarTree(resources.gzip(tarPath)))
+        into "${buildDir}/update4j/unix/"
+      }
+    } else {
+      throw new GradleException("Unsupported: " + project.ext.javafxPlatform)
+    }
+  }
 }
 
+task downloadWebViewPatch(type: Copy) {
+  from(configurations.webViewPatch) {
+    include "*webview-patch*.jar"
+  }
+  into "${buildDir}/webview-patch/"
+  rename '.*webview-patch.*\\.jar', 'webview-patch.jar'
+}
+assemble.dependsOn downloadWebViewPatch
+
+/* Makes updater.jar available as a resource to the application. */
+task copyUpdaterToResources(type: Copy) {
+  from(configurations.updater) {
+    include "updater-*.jar"
+  }
+  into "${buildDir}/resources/updater"
+  rename 'updater-.*\\.jar', 'updater.jar'
+}
+assemble.dependsOn copyUpdaterToResources
+
 task downloadIceAdapter(type: Download) {
-  group "native dependencies"
+  group "external tools"
   src "https://github.com/FAForever/java-ice-adapter/releases/download/v${faf_ice_adapter_version}/faf-ice-adapter.jar"
-  dest file("${buildDir}/resources/native/faf-ice-adapter.jar")
+  dest file("${buildDir}/resources/tools/faf-ice-adapter.jar")
   onlyIfNewer true
 }
 
 task downloadUnixUid(type: Download) {
-  group "native dependencies"
+  group "external tools"
   src "https://github.com/FAForever/uid/releases/download/v${faf_uid_version}/faf-uid"
-  dest file("${buildDir}/resources/native/faf-uid")
+  dest file("${buildDir}/resources/tools/faf-uid")
   onlyIfNewer true
   doLast {
-    file("${buildDir}/resources/native/faf-uid").setExecutable(true, false)
+    file("${buildDir}/resources/tools/faf-uid").setExecutable(true, false)
   }
 }
 
 task downloadWindowsUid(type: Download) {
-  group "native dependencies"
+  group "external tools"
   src "https://github.com/FAForever/uid/releases/download/v${faf_uid_version}/faf-uid.exe"
-  dest file("${buildDir}/resources/native/faf-uid.exe")
+  dest file("${buildDir}/resources/tools/faf-uid.exe")
   onlyIfNewer true
 }
 
 task downloadNativeDependencies(dependsOn: [downloadUnixUid, downloadWindowsUid, downloadIceAdapter]) {
-  group "native dependencies"
+  group "external tools"
 }
 
-compileJava.dependsOn 'downloadNativeDependencies'
-compileJava.dependsOn ':webview-patch:build'
+task update4jConfig(type: Update4jConfigTask, dependsOn: buildInstall4jMediaFiles) {
+  baseUrl = project.getProperties().getOrDefault("update4jBaseUrl", "http://localhost/\${version}")
+  doFirst {
+    if (project.ext.javafxPlatform == "win") {
+      sourceDir = Paths.get("${buildDir}/update4j/win/faf-client-${project.version}");
+    } else if (project.ext.javafxPlatform == "linux") {
+      sourceDir = Paths.get("${buildDir}/update4j/unix/faf-client-${project.version}");
+    }
+    update4jXml = sourceDir.resolve("update4j.xml")
+  }
+}
+
+assemble.dependsOn 'downloadNativeDependencies'
 
 task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
   main = "com.codacy.CodacyCoverageReporter"
   classpath = configurations.codacy
   args = ["-l", "Java", "-r", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"]
+}
+
+idea.project.settings.taskTriggers {
+  beforeSync tasks.getByName("downloadNativeDependencies"), tasks.getByName("copyUpdaterToResources")
 }
 
 repositories {
@@ -253,6 +275,7 @@ dependencies {
   compile("org.springframework:spring-web")
 
   compile("com.github.FAForever:faf-java-commons:${fafCommonsVersion}") {
+    exclude module: 'luaj-jse'
     exclude module: 'guava'
   }
   compile("com.google.code.gson:gson:2.8.5")
@@ -271,7 +294,8 @@ dependencies {
   compile("org.jsoup:jsoup:1.11.3")
   compile("com.nativelibs4java:bridj:0.7.0")
   compile("com.github.nocatch:nocatch:1.1")
-  compile("org.luaj:luaj-jse:3.0.1")
+  // Custom version because of https://github.com/luaj/luaj/issues/70
+  compile("com.github.micheljung:luaj:da919e2")
   compile("commons-validator:commons-validator:1.6")
   compile("com.github.micheljung:JJsonRpc:01a7fba5f4")
   compile("javax.inject:javax.inject:1")
@@ -283,8 +307,9 @@ dependencies {
   compile("javax.annotation:javax.annotation-api:1.3.1")
   compile("com.github.ben-manes.caffeine:caffeine")
   compile("org.apache.httpcomponents:httpclient")
-  compile("ch.micheljung.fxstage:fxstage:0.7.3")
+  compile("ch.micheljung.fxstage:fxstage:0.7.2")
   compile("ch.micheljung.waitomo:jfx-waitomo-theme:0.2.0")
+  compile "org.update4j:update4j:${update4jVersion}"
 
   compile("org.openjfx:javafx-base:${javafxVersion}:${javafxPlatform}")
   compile("org.openjfx:javafx-controls:${javafxVersion}:${javafxPlatform}")
@@ -293,12 +318,13 @@ dependencies {
   compile("org.openjfx:javafx-fxml:${javafxVersion}:${javafxPlatform}")
   compile("org.openjfx:javafx-web:${javafxVersion}:${javafxPlatform}")
   compile("org.openjfx:javafx-media:${javafxVersion}:${javafxPlatform}")
-  compile ("com.github.axel1200:discord-rpc:${discordRpcVersion}")
+  compile("com.github.axel1200:discord-rpc:${discordRpcVersion}")
 
-  compile project(":webview-patch")
+  webViewPatch('com.github.micheljung:javafx-transparent-webview-patch:0468c80')
+  updater project(':updater')
   compile("org.javassist:javassist:${project.ext['javassist.version']}")
 
-  provided("com.install4j:install4j-runtime:${install4jRuntimeVersion}")
+  compileOnly("com.install4j:install4j-runtime:${install4jRuntimeVersion}")
 
   testCompile 'junit:junit:4.13'
   testCompile("org.testfx:testfx-core:4.0.8-alpha") {
